<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registration details</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="registrationpage">Registration Page</string>
    <string name="emailid">Email_id</string>
    <string name="password">Password</string>
    <string name="sq">S.Q</string>
    <string name="answer">Answer</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="title_activity_secnd">SecndActivity</string>
    <string name="loginpage">login Page</string>
    <string name="email">Email_ID</string>
    <string name="passwrd">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_fail">FailActivity</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="title_activity_del">DelActivity</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="emaili">Email_Id</string>
    <string name="next">Next</string>
    <string name="title_activity_forget1">Forget1Activity</string>
    <string name="sq1">S.Q:</string>
    <string name="ans">Ans</string>
    <string name="next2">Next</string>
    <string name="title_activity_forget2">Forget2Activity</string>
    <string name="newpasswrd">New Password</string>
    <string name="submit">Submit</string>
    <string name="who">Who?</string>
    <string name="eml">Email_Id:</string>
    <string name="deletee">Delete</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="emll">Email:</string>
    <string name="passwrdd">Password:</string>
    <string name="updatee">Update</string>
    <string name="welcometothe">Welcome To The Pizza</string>
    <string name="housee">House</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="exit">Exit</string>
    <string name="security_question">Security Question</string>

    <string-array name="security_arrays">
        <item>select question</item>
        <item>Your First Phone no</item>
        <item>Your First Friend</item>
    </string-array>

    <string name="menuu">Menu</string>
    <string name="everydaydailyoffer">Everyday Daily Offer</string>
    <string name="title_activity_menu">MenuActivity</string>

</resources>
