<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:text="@string/welcometothe"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/housee"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/signup"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginRight="18dp"
        android:text="@string/signin" 
         android:background="@android:color/transparent"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="signin"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="102dp"
        android:layout_toLeftOf="@+id/textView2"
        android:background="@android:color/transparent"
        android:onClick="signup"
        android:text="@string/signup"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/signin"
        android:layout_marginTop="23dp"
        android:text="@string/exit"
        android:background="@android:color/transparent"
        android:onClick="exi" />

</RelativeLayout>
